--- a/css/gear.css
+++ b/css/gear.css
@@ -20,7 +20,7 @@ body {
     margin: 0;
     min-height: 100vh;
     background-position: center;
-    background-color: var(--beige-color);
+    background-color: #191816;
     background-image: url("../assets/tloNalesnikartDark.jpg");
 }
 
